DigIt CHANGE LOG
======================

2025/05/27 Solved Cancel Closing Erase AutoSave;
           Updated Languages

        26 Added IsAutoSave in LoadSession;
           Clear AutoSaved Files when Close and User do not save Session;
           Asks user whether to read a session's autosave if date\time is greater;

        22 Added Profiles Menu Item;
           Moved PhysicalSizeConvert from BGRABitmap  (see argument about this on github);

        14 Renamed XML_ methods;
           Added Profiles Array and file;

        12 Added Select Source sub Items in Bridge and WIA Source;
           Added Sub Items in BuildSourcesMenu and MainForm;

        09 First Tests for Source Sub Items

	08 Save of Opened Session in Config File;
           Changed Default Session Path;
           Added UI_Caption method;

        06 ResizeImage use of ConvertSizeToResolutionUnit renamed function and HalfUp

2025/04/30 Added SourceFiles_Add StartIndex param;
           Fixed ReTake bugs in CustomMode;
           Added Open .digs File in FormShow;
           Release of 0.2 beta;

        29 Changed Counter Value to DWord;
           Added method CropFiles and Counter_Assign;
           ReTake/GoNext/GoBack Use Counter and CropCount stored in SourceFile;

        28 Updated ResizeImage;
           Resize is the Last Filter in LoadImage;
           UI Moved Page Resize Panel after Flip;
           PageSizes Menù Always Enabled;

        18 Updated Page Resize;
           Page Rotate/Flip/Resize in LoadImage;
           Added Target Platform sub paths to Languages;

        17 Page Size/Rotate/Flip always enabled on right roll;
           Added Page Fixed Size Combobox;
           Rotate/Flip reload Image when Changed in UI;
           Renamed TDigItFlip/Rotate to TDigItFilter_Flip/Rotate;
           Renamed function GetThumnailSize to GetProportionalSize;

        16 Solved Sources Wia/Twain Clear exception;
           First write of Re Take for Custom Mode;