@@ -110,7 +110,7 @@
         <PackageName Value="LCL"/>
       </Item5>
     </RequiredPackages>
-    <Units Count="15">
+    <Units Count="16">
       <Unit0>
         <Filename Value="DigIt_Linux.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -131,63 +131,67 @@
         <IsPartOfProject Value="True"/>
       </Unit3>
       <Unit4>
-        <Filename Value="DigIt_Counters.pas"/>
+        <Filename Value="DigIt_Types.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit4>
       <Unit5>
-        <Filename Value="DigIt_Types.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit5>
-      <Unit6>
         <Filename Value="DigIt_Form_Templates.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="DigIt_Templates"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-      </Unit6>
-      <Unit7>
+      </Unit5>
+      <Unit6>
         <Filename Value="_to-do.txt"/>
         <IsPartOfProject Value="True"/>
-      </Unit7>
-      <Unit8>
+      </Unit6>
+      <Unit7>
         <Filename Value="DigIt_Bridge_Intf.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Digit_Bridge_Intf"/>
-      </Unit8>
-      <Unit9>
+      </Unit7>
+      <Unit8>
         <Filename Value="DigIt_Bridge_Impl.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Digit_Bridge_Impl"/>
+      </Unit8>
+      <Unit9>
+        <Filename Value="DigIt_Sources.pas"/>
+        <IsPartOfProject Value="True"/>
       </Unit9>
       <Unit10>
-        <Filename Value="DigIt_Sources.pas"/>
+        <Filename Value="DigIt_Destinations.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit10>
       <Unit11>
-        <Filename Value="DigIt_Destinations.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit11>
-      <Unit12>
         <Filename Value="DigIt_Form_Progress.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="DigIt_Progress"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-      </Unit12>
-      <Unit13>
+      </Unit11>
+      <Unit12>
         <Filename Value="DigIt_Form_BuildDuplex.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="WizardBuildDuplex"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-      </Unit13>
-      <Unit14>
+      </Unit12>
+      <Unit13>
         <Filename Value="DigIt_Form_ExportFiles.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="DigIt_ExportFiles"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+      </Unit13>
+      <Unit14>
+        <Filename Value="DigIt_Counter.pas"/>
+        <IsPartOfProject Value="True"/>
       </Unit14>
+      <Unit15>
+        <Filename Value="DigIt_Settings.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit15>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
