@@ -8,10 +8,11 @@ uses
   {$ENDIF}{$ENDIF}
   Interfaces, // this includes the LCL widgetset
   LCLVersion, DefaultTranslator, LCLTranslator, Forms, lazcontrols,
-  DigIt_Bridge_Intf, DigIt_Bridge_Impl, DigIt_Types, DigIt_Counters,
-  DigIt_Utils, DigIt_Form_Main, DigIt_Form_Templates, DigIt_Sources,
-  DigIt_Destinations, DigIt_Form_Progress, DigIt_Form_BuildDuplex,
-  Digit_Source_Folder,
+  DigIt_Types, DigIt_Utils, DigIt_Bridge_Intf, DigIt_Settings, DigIt_Bridge_Impl,
+  DigIt_Counter,
+  DigIt_Sources, Digit_Source_Folder,
+  DigIt_Destinations,
+  DigIt_Form_Main, DigIt_Form_Templates, DigIt_Form_Progress, DigIt_Form_BuildDuplex,
   DigIt_Form_ExportFiles;
 
 {$R *.res}
